Modify background colors

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="author" content="Polycarp Anyanwu" />
   <meta name="description" content="History of New Yam Festival among the Igbo Tribe of Eastern Nigeria" />
   <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.png" />
   <title>New Yam Festival</title>
 </head>
 
@@ -46,9 +46,9 @@
     </section>
     <!-- Section that introduces yam, how it is grown and festival mythology -->
     <section id="history-section">
-      <div class="history-div">
+      <div class="history-div history-div-text">
         <h2>What is Yam</h2>
-        <hr class="full-line">
+        <div class="full-line"></div>
         <p>
           Yam is among the edible tubers Yams are perennial herbaceous vines
           cultivated for the consumption of their starchy tubers in many
@@ -56,7 +56,8 @@
           America and the Caribbean, Asia, and Oceania (Wikipedia). There are
           various species of yams. Yams are particularly celebrated in the
           eastern part of Nigeria where they are regarded as the king of crops.
-          Yams are reported to be an excellent source of fibre, high in potassium and manganese, which are important for supporting
+          Yams are reported to be an excellent source of fibre, high in potassium and manganese, which are important for
+          supporting
           bone health, growth, metabolism, and heart function.
         </p>
       </div>
@@ -76,9 +77,9 @@
           </figcaption>
         </figure>
       </div>
-      <div class="history-div">
+      <div class="history-div history-div-text">
         <h2>The Yam Crop Growing on Sticks</h2>
-        <hr class="full-line">
+        <div class="full-line"></div>
         <p>
           Yams are grown vertically on sticks in the field. The tubers are
           harvested by digging them out of the soil beneath the plants at the
@@ -91,9 +92,9 @@
           to climb the stake. This ensures they get good sunshine to guarantee a bountiful harvest.
         </p>
       </div>
-      <div class="history-div">
+      <div class="history-div history-div-text">
         <h2>Mythology of Yam Festivals</h2>
-        <hr class="full-line">
+        <div class="full-line"></div>
         <p>
           Once upon a time, a severe famine struck an unnamed Igbo land. Plants
           withered and animals died. The people were livid. They pressured their
@@ -119,8 +120,17 @@
         </figure>
       </div>
       <div class="history-div">
+        <figure>
+          <img src="assets/images/newyam-Igbo-dublin.jpg" alt="New Yam Festival Igbo People in Dublin" />
+          <figcaption class="caption">Igbo People in Dublin Celebrating New Yam Festival
+            <a href="https://en.wikipedia.org/wiki/New_Yam_Festival_of_the_Igbo#/media/File:NewYam-IgboFestival-Dublin.jpg "
+              target="_blank" rel="noopener">(Wikipedia)</a>
+          </figcaption>
+        </figure>
+      </div>
+      <div class="history-div history-div-text">
         <h2>History of Yam Festivals</h2>
-        <hr class="full-line">
+        <div class="full-line"></div>
         <p>
           Yams are the first crops to be harvested and are therefore the most
           important in Igbo land. Igbo people are agrarian by nature and so yam
@@ -137,14 +147,18 @@
           evidence of a good life with accomplishments.
         </p>
       </div>
-      <div class="history-div">
-        <figure>
-          <img src="assets/images/newyam-Igbo-dublin.jpg" alt="New Yam Festival Igbo People in Dublin" />
-          <figcaption class="caption">Igbo People in Dublin Celebrating New Yam Festival
-            <a href="https://en.wikipedia.org/wiki/New_Yam_Festival_of_the_Igbo#/media/File:NewYam-IgboFestival-Dublin.jpg "
-              target="_blank" rel="noopener">(Wikipedia)</a>
-          </figcaption>
-        </figure>
+      <div class="history-div history-div-text">
+        <h2>When is the Festival</h2>
+        <div class="full-line"></div>
+        <p>
+          The New Yam Festival is an annual tradition observed by the Igbo
+          People of Eastern Nigeria. In some Igbo communities, the celebration
+          lasts a day but in some other communities, it usually takes a week.
+          This festival is core to the ancient Igbo culture as the Igbos see
+          yam as the king of all crops. To depict its prominence, The Igbos
+          observe this festival to thank the gods for a good harvest. At
+          Mbaise in Imo State it is celebrated on the 15 August of every year.
+        </p>
       </div>
       <div class="history-div">
         <figure>
@@ -156,26 +170,14 @@
           </figcaption>
         </figure>
       </div>
-      <div class="history-div">
-        <h2>When is the Festival</h2>
-        <hr class="full-line">
-        <p>
-          The New Yam Festival is an annual tradition observed by the Igbo
-          People of Eastern Nigeria. In some Igbo communities, the celebration
-          lasts a day but in some other communities, it usually takes a week.
-          This festival is core to the ancient Igbo culture as the Igbos see
-          yam as the king of all crops. To depict its prominence, The Igbos
-          observe this festival to thank the gods for a good harvest. At
-          Mbaise in Imo State it is celebrated on the 15 August of every year.
-        </p>
-      </div>
+
     </section>
     <!-- Yam Festival Celebrations captured in pictures -->
     <section id="image-gallery">
       <h2>Yam Festival Celebrations</h2>
-      <hr class="full-line">
+      <div class="full-line"></div>
       <div class="image" id="gallery-1">
-        <hr class="image-intro-line">
+        <div class="image-intro-line"></div>
         <figure>
           <img src="assets/images/new-yam-festival-02.webp" alt="yam" />
           <figcaption class="caption">Celebration of New Yam Festival at Okija in Ihiala local government area of
@@ -184,7 +186,7 @@
         </figure>
       </div>
       <div class="image" id="gallery-3">
-        <hr class="image-intro-line">
+        <div class="image-intro-line"></div>
         <figure>
           <img src="assets/images/new-yam-festival-in-nnewi.webp" alt="yam" />
           <figcaption class="caption">
@@ -193,7 +195,7 @@
         </figure>
       </div>
       <div class="image" id="gallery-4">
-        <hr class="image-intro-line">
+        <div class="image-intro-line"></div>
         <figure>
           <img src="assets/images/igbo_ukwu.webp" alt="yam" />
           <figcaption class="caption">
@@ -206,7 +208,7 @@
         </figure>
       </div>
       <div class="image" id="gallery-5">
-        <hr class="image-intro-line">
+        <div class="image-intro-line"></div>
         <figure>
           <img src="assets/images/yam-wonen-dance.webp" alt="Women dancing at Festival" />
           <figcaption class="caption">Women Dancing at a Yam Festival <em> (<a
@@ -215,7 +217,7 @@
         </figure>
       </div>
       <div class="image">
-        <hr class="image-intro-line">
+        <div class="image-intro-line"></div>
         <figure>
           <img src="assets/images/new-yam-atilogwu-dancers.webp" alt="Atilogwu dance" />
           <figcaption class="caption">Traditional Atilogwu dance at a Yam Festival <em> (<a
@@ -224,7 +226,7 @@
         </figure>
       </div>
       <div class="image">
-        <hr class="image-intro-line">
+        <div class="image-intro-line"></div>
         <figure>
           <img src="assets/images/igbo_ghana_yam.webp" alt="yam" />
           <figcaption class="caption">
@@ -243,43 +245,50 @@
     <!-- Section that presents few video of yam festival -->
     <section id="festival-section">
       <h2>Celebration Events in Video</h2>
-      <hr class="full-line">
+      <div class="full-line"></div>
       <div class="videoitem">
-        <hr class="image-intro-line">
-          <!-- auto play was added after testing on iPhone. It enables a beautiful screen of the video 
+        <div class="image-intro-line"></div>
+        <!-- auto play was added after testing on iPhone. It enables a beautiful screen of the video 
           to be visible but still wont play until the user clicks on it which is the desired outcome -->
         <video controls autoplay muted>
           <source src="assets/videos/yam_festival1.mp4" type="video/mp4">
           <p>video on celebrating new yam festival: Your browser doesn't support HTML5 Video
           </p>
         </video>
-        <p>Celebrating new yam festival in Igbo land. The Eze (Traditional Ruler) of the community performs the ritual
-          of being the first to cut and eat the new yam. After that, members of the community could partake of the
-          eating
-          of yams for the harvest season.</p>
-        <a href="https://www.youtube.com/watch?v=awBHeFO3228" target="_blank" rel="noopener"
-          aria-label="Watch the full video on youtube">You may watch the full video on YouTube
-          <i class="fab fa-youtube"></i> by clicking here.
-        </a>
+        <div class="history-div-text">
+          <p>Celebrating new yam festival in Igbo land. The Eze (Traditional Ruler) of the community performs the ritual
+            of being the first to cut and eat the new yam. After that, members of the community could partake of the
+            eating
+            of yams for the harvest season.</p>
+          <a href="https://www.youtube.com/watch?v=awBHeFO3228" target="_blank" rel="noopener"
+            aria-label="Watch the full video on youtube">You may watch the full video on YouTube
+            <i class="fab fa-youtube"></i> by clicking here.
+          </a>
+        </div>
       </div>
       <div class="videoitem">
-        <hr class="image-intro-line">
-        <video controls loop autoplay muted>
+        <div class="image-intro-line"></div>
+        <video controls autoplay muted>
           <source src="assets/videos/yam_festival2.mp4" type="video/mp4">
           <p>Second video on celebrating new yam festival: Your browser doesn't support HTML5 video</p>
         </video>
-        <p>
-          The New Yam Festival is accompanied by different colorful traditional displays. The Mkponkiti dance is typical
-          of such dance during the festival. Ecah Igbo community may have unique dance styles they are known for during
-          celebrations, the yam festival is typical day to showcase such dance steps.
-        </p>
-        <p>Several traditional/cultural dances are displayed by the people and a joyous mood. Sometimes illustrous sons
-          of
-          the town offer assistance to their fellow citizens to mark the celebrations. In some instances traditional
-          titles are conferred on deserving indigenes of the town </p>
+        <div class="history-div-text">
+          <p>
+            The New Yam Festival is accompanied by different colorful traditional displays. The Mkponkiti dance is
+            typical
+            of such dance during the festival. Ecah Igbo community may have unique dance styles they are known for
+            during
+            celebrations, the yam festival is typical day to showcase such dance steps.
+          </p>
+          <p>Several traditional/cultural dances are displayed by the people and a joyous mood. Sometimes illustrous
+            sons
+            of
+            the town offer assistance to their fellow citizens to mark the celebrations. In some instances traditional
+            titles are conferred on deserving indigenes of the town </p>
+        </div>
       </div>
       <div class="videoitem">
-        <hr class="image-intro-line">
+        <div class="image-intro-line"></div>
         <!-- Courtesy of https://www.youtube.com/watch?v=ZrPPYXIdAZg -->
         <iframe src="https://www.youtube.com/embed/ZrPPYXIdAZg" title="YouTube video player" allowfullscreen></iframe>
         <p>Igbo people at Enugu State, South Eastern Nigeria celebrating the new yam festival in grand style.</p>
@@ -288,15 +297,15 @@
     <!-- A section that informs the user of the Igbo tribe -->
     <section id="igbo-section">
       <h2>Who are the Igbos that Celebrate Yam Festivals</h2>
-      <hr class="full-line">
+      <div class="full-line"></div>
       <div class="igbo-item">
-        <hr class="image-intro-line">
+        <div class="image-intro-line"></div>
         <!-- adopted from the YouTube video -->
         <iframe src="https://www.youtube.com/embed/Jr82EvHiKyU" title="An Igbo History" allowfullscreen></iframe>
         <p>The video above is an account of the an aspect of the history of the Igbo. Enjoy watching.</p>
       </div>
-      <div class="igbo-item">
-        <hr class="image-intro-line">
+      <div class="igbo-item history-div-text">
+        <div class="image-intro-line"></div>
         <p>Igbos are found in the South Eastern part of Nigeria. A description of the Igbos given by Britannica.com is
           well apt and sumarised below: Most Igbo traditionally have been subsistence farmers, their staples being yams,
           cassava, and taro. The other crops they grow include corn (maize), melons, okra, pumpkins, and beans. Among
