fix all alt attributes with the correct message

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
       <div class="history-div">
         <figure>
-          <img src="assets/images/yam.webp" alt="yam" />
+          <img src="assets/images/yam.webp" alt="yam tubers" />
           <figcaption class="caption">Harvested yam <em>(<a href="https://www.iita.org/test-yam/" target="_blank"
                 rel="noopener">IITA</a>)</em>
           </figcaption>
@@ -119,7 +119,7 @@
       </div>
       <div class="history-div">
         <figure>
-          <img src="assets/images/ibeku_people.webp" alt="yam" />
+          <img src="assets/images/ibeku_people.webp" alt="Ibeku people celebrating yam festival" />
           <figcaption class="caption">
             Ibeku ancient kingdom in Umuahia North Local Government Area of Abia
             state, celebrating 2021 new yam festival
@@ -187,7 +187,7 @@
       <div class="image" id="gallery-1">
         <div class="image-intro-line"></div>
         <figure>
-          <img src="assets/images/new-yam-festival-02.webp" alt="yam" />
+          <img src="assets/images/new-yam-festival-02.webp" alt="Okija people celebrating yam festival" />
           <figcaption class="caption">Celebration of New Yam Festival at Okija in Ihiala local government area of
             Anambra state, Nigeria. <em> (<a href="https://umdaokija.org/festivals/" target="_blank"
                 rel="noopener">Umuzu Mainland Develoment Association</a>)</em> </figcaption>
@@ -196,18 +196,18 @@
       <div class="image" id="gallery-3">
         <div class="image-intro-line"></div>
         <figure>
-          <img src="assets/images/new-yam-festival-in-nnewi.webp" alt="yam" />
+          <img src="assets/images/new-yam-festival-in-nnewi.webp" alt="Yam festival at Nnewi" />
           <figcaption class="caption">
             New Yam Festival celebration at Nnewi Anambra State Nigeria
-            <em> <a href="https://guardian.ng/life/iwa-ji-the-new-yam-festival-in-igbo-land/" target="_blank"
-                rel="noopener">(The Guardian)</em></a>
+            <a href="https://guardian.ng/life/iwa-ji-the-new-yam-festival-in-igbo-land/" target="_blank"
+              rel="noopener"><em>(The Guardian)</em></a>
           </figcaption>
         </figure>
       </div>
       <div class="image" id="gallery-4">
         <div class="image-intro-line"></div>
         <figure>
-          <img src="assets/images/igbo_ukwu.webp" alt="yam" />
+          <img src="assets/images/igbo_ukwu.webp" alt="Igbo Ukwu Yam Festival" />
           <figcaption class="caption">
             The Igboukwu festival is celebrated yearly by the indigenous
             communities of Igboukwu in Aguata Local Government Area of Anambra
@@ -240,7 +240,7 @@
       <div class="image">
         <div class="image-intro-line"></div>
         <figure>
-          <img src="assets/images/igbo_ghana_yam.webp" alt="yam" />
+          <img src="assets/images/igbo_ghana_yam.webp" alt="Igbo tribe in Ghana at Yam Festival" />
           <figcaption class="caption">
             Igbo tribe in Ghana, West Africa celebrate New Yam Festival on 19
             September, 2021. The event enabled Igbo people to come together to
@@ -302,8 +302,8 @@
         <iframe src="https://www.youtube.com/embed/ZrPPYXIdAZg" title="YouTube video player" allowfullscreen></iframe>
         <p class="caption">Igbo people at Enugu State, South Eastern Nigeria celebrating the new yam festival in grand
           style.
-          <em> <a href="https://www.youtube.com/watch?v=ZrPPYXIdAZg" target="_blank"
-              rel="noopener">(YouTube-BluePrintAfricTV)</em></a>
+          <a href="https://www.youtube.com/watch?v=ZrPPYXIdAZg" target="_blank"
+            rel="noopener"><em>(YouTube-BluePrintAfricTV)</em></a>
         </p>
       </div>
     </section>
@@ -317,8 +317,8 @@
         <!-- adopted from the YouTube video -->
         <iframe src="https://www.youtube.com/embed/Jr82EvHiKyU" title="An Igbo History" allowfullscreen></iframe>
         <p class="caption">The video above is an account of the an aspect of the history of the Igbo. Enjoy
-          watching.<em> <a href="https://www.youtube.com/watch?v=Jr82EvHiKyU" target="_blank"
-              rel="noopener">(YouTube)</em> </a></p>
+          watching. <a href="https://www.youtube.com/watch?v=Jr82EvHiKyU" target="_blank"
+            rel="noopener"><em>(YouTube)</em> </a></p>
       </div>
       <div class="igbo-item history-div-text">
         <div class="image-intro-line"></div>
