fix formatting of html text

--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
           various species of yams. Yams are particularly celebrated in the
           eastern part of Nigeria where they are regarded as the king of crops.
           Yams are reported to be an excellent source of fibre, high in potassium and manganese, which are important for
-          supporting
-          bone health, growth, metabolism, and heart function.
+          supporting bone health, growth, metabolism, and heart function.
         </p>
       </div>
       <div class="history-div">
@@ -270,8 +269,7 @@
         <div class="history-div-text">
           <p>Celebrating new yam festival in Igbo land. The Eze (Traditional Ruler) of the community performs the ritual
             of being the first to cut and eat the new yam. After that, members of the community could partake of the
-            eating
-            of yams for the harvest season.</p>
+            eating of yams for the harvest season.</p>
           <a href="https://www.youtube.com/watch?v=awBHeFO3228" target="_blank" rel="noopener"
             aria-label="Watch the full video on youtube">You may watch the full video on YouTube
             <i class="fab fa-youtube"></i> by clicking here.
@@ -288,13 +286,11 @@
           <p>
             The New Yam Festival is accompanied by different colorful traditional displays. The Mkponkiti dance is
             typical of such dance during the festival. Ecah Igbo community may have unique dance styles they are known
-            for
-            during celebrations, the yam festival is typical day to showcase such dance steps.
+            for during celebrations, the yam festival is typical day to showcase such dance steps.
           </p>
           <p>Several traditional/cultural dances are displayed by the people and a joyous mood. Sometimes illustrous
             sons of the town offer assistance to their fellow citizens to mark the celebrations. In some instances
-            traditional
-            titles are conferred on deserving indigenes of the town </p>
+            traditional titles are conferred on deserving indigenes of the town </p>
         </div>
       </div>
       <div class="videoitem">
