converted one image to webp plus compression

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </div>
       <div class="history-div">
         <figure>
-          <img src="assets/images/newyam-Igbo-dublin.jpg" alt="New Yam Festival Igbo People in Dublin" />
+          <img src="assets/images/newyam-Igbo-dublin.webp" alt="New Yam Festival Igbo People in Dublin" />
           <figcaption class="caption">Igbo People in Dublin Celebrating New Yam Festival
             <a href="https://en.wikipedia.org/wiki/New_Yam_Festival_of_the_Igbo#/media/File:NewYam-IgboFestival-Dublin.jpg "
               target="_blank" rel="noopener"><em>(Wikipedia)</em></a>
