Modify css for the banner reference to be all visible on small screens

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- reference where the banner image was obtained from -->
       <div id="banner-ref">
         <em>(<a href="https://www.ezendigbo-gh.com/post/igbos-in-ghana-celebrate-7th-new-yam-festival" target="_blank"
-            rel="noopener">EZE NDI IGBO GHANA</a>)</em>
+            rel="noopener">Eze Igbo Ghana</a>)</em>
       </div>
     </section>
     <!-- Section that introduces yam, how it is grown and festival mythology -->
